syntax = "proto3";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "com.scalar.backup.cassandra.rpc";
option java_outer_classname = "CassandraBackupProto";

package rpc;

service CassandraBackup {
    rpc ShowClusters (google.protobuf.Empty) returns (ClusterListingResponse) {
        option (google.api.http) = {
            get: "/v1/clusters"
        };
    }
    rpc ListNodes (NodeListingRequest) returns (NodeListingResponse) {
        option (google.api.http) = {
            get: "/v1/clusters/{cluster_id}"
        };
    }
    rpc ListBackups (BackupListingRequest) returns (BackupListingResponse) {
        option (google.api.http) = {
            get: "/v1/clusters/{cluster_id}/backups"
        };
    }
    rpc TakeBackup (BackupRequest) returns (BackupResponse) {
        option (google.api.http) = {
            post: "/v1/clusters/{cluster_id}/backups"
            body: "*"
        };
    }
    rpc RestoreBackup (RestoreRequest) returns (RestoreResponse) {
        option (google.api.http) = {
            put: "/v1/clusters/{cluster_id}/data/{backup_id}"
            body: "*"
        };
    }
}

message ClusterListingResponse {
    repeated string cluster_id = 1;
}

message NodeListingRequest {
    string cluster_id = 1;
}

message NodeListingResponse {
    message Entry {
        string ip = 1;
        enum NodeStatus {
            UNKNOWN = 0;
            LIVE = 1;
            LEAVING = 2;
            MOVING = 3;
            JOINING = 4;
            UNREACHABLE = 5;
        }
        NodeStatus status = 2;
    }
    repeated Entry entries = 1;
}

message BackupListingRequest {
    string cluster_id = 1;
    string target_ip = 2;
    uint32 n = 3;
}

message BackupListingResponse {
    message Entry {
        string snapshot_id = 1;
        uint64 backup_id = 2;
        string cluster_id = 3;
        string target_ip = 4;
        uint32 backup_type = 5;
        BackupStatus status = 6;
        uint64 timestamp = 7;
    }
    repeated Entry entries = 1;
}

enum BackupStatus {
    UNKNOWN = 0;
    STARTED = 1;
    COMPLETED = 2;
    FAILED = 3;
}

message BackupRequest {
    string cluster_id = 1;
    uint32 backup_type = 2;
    string target_ip = 3;
    repeated string keyspaces = 4;
    string snapshot_id = 5;
}

message BackupResponse {
    string message = 1;
    uint64 backup_id = 2;
}

message RestoreRequest {
    string cluster_id = 1;
    uint64 backup_id = 2;
    uint32 restore_type = 3;
    repeated string target_ips = 4;
}

message RestoreResponse {
    string message = 1;
}
